<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uncc.mobileappdev.midterm.DisplayAppInformation">

    <ImageView
        android:id="@+id/app_image_display"
        android:layout_width="282dp"
        android:layout_height="146dp"
        android:layout_below="@+id/release_date_display"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/content_desc"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/app_name_display"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/app_image_display"
        android:layout_marginTop="26dp"
        android:text="@string/application_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/release_date_display"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name_display"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/date_display"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/genre_display"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/app_image_display"
        android:layout_below="@+id/app_image_display"
        android:layout_marginTop="52dp"
        android:text="@string/genre_display"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="246dp" />

    <TextView
        android:id="@+id/dev_display"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/genre_display"
        android:layout_below="@+id/genre_display"
        android:layout_marginTop="27dp"
        android:text="@string/dev_display"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/copyright_display"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/app_image_display"
        android:layout_marginBottom="22dp"
        android:text="@string/copyright_display"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="455dp" />
</RelativeLayout>
