<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uncc.mobileappdev.midterm.MainActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="83dp" />

    <TextView
        android:id="@+id/genre_text_view"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/genre_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/genre_text_view"
        android:layout_alignBottom="@+id/genre_text_view"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:text="@string/filter_button" />

    <TextView
        android:id="@+id/genre_selection"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/genre_text_view"
        android:layout_alignBottom="@+id/genre_text_view"
        android:layout_toEndOf="@+id/genre_text_view"
        android:text="@string/initial_category"
        android:textSize="18sp"
        tools:text="@string/initial_category" />

</RelativeLayout>